Add DAO hourly volume handling
